# defaultradar

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: features.yaml
dashboard/: README.md  requirements.txt  streamlit_app.py
dashboard/assets/: model.joblib
docker/: Dockerfile  mlflow.Dockerfile
scripts/: download_data.py
src/defaultradar/: __init__.py  cli.py  config.py  demo.py
src/defaultradar/data/: __init__.py  download.py  duckdb_summary.py
src/defaultradar/explain/: __init__.py  shap_utils.py
src/defaultradar/features/: __init__.py  pipeline.py  schema.py
src/defaultradar/monitoring/: __init__.py  drift.py  flows.py  run.py  simulate.py
src/defaultradar/registry/: __init__.py  promote.py
src/defaultradar/serving/: __init__.py  app.py  schemas.py  service.py
src/defaultradar/training/: __init__.py  evaluate.py  metrics.py  model.py  plots.py  train.py
tests/: conftest.py  test_config.py  test_data_download.py  test_drift.py  test_duckdb_summary.py  test_infra_mlflow.py  test_leakage.py  test_lifecycle.py  test_metrics.py  test_promotion.py  test_serving.py  test_split.py  test_training.py
tests/fixtures/: lc_sample.csv
